# cbin

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  games.pgn
.github/workflows/: codspeed.yml
benches/: cbin.rs
schema/: chess.fbs
src/: converter.rs  lib.rs  main.rs  serializer.rs  utils.rs
