[package]
name = "chessb"
version = "0.1.0"
edition = "2024"
description = "A chess binary format library and utility"
license = "MIT"
repository = "https://github.com/samwightt/chessb"
readme = "README.md"
keywords = ["chess", "binary", "format", "pgn"]
categories = ["games", "data-structures"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
indicatif = "0.18.0"
memmap2 = "0.9.7"
num-format = "0.4.4"
pgn-reader = "0.28.0"
planus = "1.1.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["serde_derive"]}
shakmaty = "0.29.0"
zstd = "0.13.3"
